--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +13,7 @@
     />
   </head>
   <body>
+    <!-- header -->
     <header>
       <nav>
         <a href="./index.html" class="logo"
@@ -40,73 +41,79 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- title -->
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
+      <!-- feautures -->
       <section>
         <h2>Our Offert</h2>
-        <ul>
+        <ul class="features">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-
+      <!-- sectin Team -->
       <section>
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team">
           <li>
             <img src="./images/img-1.jpg" width="264" alt="Mark Guerrero" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-profession">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" width="264" alt="Tom Ford" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-profession">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-3.jpg" width="264" alt="Camila Garcia" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-profession">Marketing</p>
           </li>
           <li>
             <img src="./images/img-4.jpg" width="264" alt="Daniel Wilson" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-profession">UI Designer</p>
           </li>
         </ul>
       </section>
+      <!-- section Portfolio -->
+      <section></section>
     </main>
     <footer>
-      <a href="./index.html"> WebStudio </a>
+      <a href="./index.html" class="logo">
+        <span class="logo-web">Web</span>Studio
+      </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
