--- a/index.html
+++ b/index.html
@@ -86,29 +86,104 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team">
           <li>
-            <img src="./images/img-1.jpg" width="264" alt="Mark Guerrero" />
+            <img
+              src="./images/Mark Guerrero.jpg"
+              width="264"
+              alt="Mark Guerrero"
+            />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-profession">Product Designer</p>
           </li>
           <li>
-            <img src="./images/img-2.jpg" width="264" alt="Tom Ford" />
+            <img src="./images/Tom Ford.jpg" width="264" alt="Tom Ford" />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-profession">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img-3.jpg" width="264" alt="Camila Garcia" />
+            <img
+              src="./images/Camila Garcia.jpg"
+              width="264"
+              alt="Camila Garcia"
+            />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-profession">Marketing</p>
           </li>
           <li>
-            <img src="./images/img-4.jpg" width="264" alt="Daniel Wilson" />
+            <img
+              src="./images/Daniel Wilson.jpg"
+              width="264"
+              alt="Daniel Wilson"
+            />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-profession">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- section Portfolio -->
-      <section></section>
+      <section>
+        <ul class="portfolio">
+          <li>
+            <img
+              src="./images/Banking App.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-text">Portfolio</p>
+          </li>
+          <li>
+            <img
+              src="./images/Cashless Payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Meditation App.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Taxi Service.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Screen Illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/Online Courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="./index.html" class="logo">
