--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio
+          >Web<span class="logo-web">Studio</span>
         </a>
         <ul class="menu">
-          <li><a href="#" class="menu-link">Studio</a></li>
-          <li><a href="#" class="menu-link">Portfolio</a></li>
-          <li><a href="#" class="menu-link">Contacts</a></li>
+          <li><a href="" class="menu-link">Studio</a></li>
+          <li><a href="" class="menu-link">Portfolio</a></li>
+          <li><a href="" class="menu-link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts-wrapper">
         <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" class="contacts-link"
@@ -48,7 +48,7 @@
       </section>
       <!-- feautures -->
       <section>
-        <h2>Our Offert</h2>
+        <h2 class="feautures-title">Our Offert</h2>
         <ul class="features">
           <li>
             <h3 class="feature-title">Strategy</h3>
@@ -82,35 +82,35 @@
         </ul>
       </section>
       <!-- sectin Team -->
-      <section>
+      <section class="team-section">
         <h2 class="team-title">Our Team</h2>
         <ul class="team">
-          <li>
+          <li class="team-item">
             <img
-              src="./images/Mark Guerrero.jpg"
+              src="./images/Mark-Guerrero.jpg"
               width="264"
               alt="Mark Guerrero"
             />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-profession">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/Tom Ford.jpg" width="264" alt="Tom Ford" />
+          </li >
+          <li  class="team-item">
+            <img src="./images/Tom-Ford.jpg" width="264" alt="Tom Ford" />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-profession">Frontend Developer</p>
           </li>
-          <li>
+          <li  class="team-item">
             <img
-              src="./images/Camila Garcia.jpg"
+              src="./images/Camila-Garcia.jpg"
               width="264"
               alt="Camila Garcia"
             />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-profession">Marketing</p>
           </li>
-          <li>
+          <li  class="team-item">
             <img
-              src="./images/Daniel Wilson.jpg"
+              src="./images/Daniel-Wilson.jpg"
               width="264"
               alt="Daniel Wilson"
             />
@@ -121,73 +121,76 @@
       </section>
       <!-- section Portfolio -->
       <section>
+        <h2 class="portfolio-title">Our Team</h2>
         <ul class="portfolio">
+
           <li>
             <img
-              src="./images/Banking App.jpg"
+              src="./images/Banking-App.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Banking App</h3>
+            <h3 class="portfolio-name>Banking App</h3>
             <p class="portfolio-text">Portfolio</p>
           </li>
           <li>
             <img
-              src="./images/Cashless Payment.jpg"
+              src="./images/Cashless-Payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Cashless Payment</h3>
+            <h3 class="portfolio-name">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/Meditation App.jpg"
+              src="./images/Meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Meditation App</h3>
+            <h3 class="portfolio-name">Meditation App</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
-              src="./images/Taxi Service.jpg"
+              src="./images/Taxi-Service.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Taxi Service</h3>
+            <h3 class="portfolio-name">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/Screen Illustrations.jpg"
+              src="./images/Screen-Illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <h3 class="portfolio-name">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
-              src="./images/Online Courses.jpg"
+              src="./images/Online-Courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title">Online Courses</h3>
+            <h3 class="portfolio-name">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo">
-        <span class="logo-web">Web</span>Studio
+      <a href="./index.html" class="logo"
+        >web
+        <span class="logo-web">studio</span>
       </a>
       <p>
         Increase the flow of customers and sales for your business with digital
