--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <!-- header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-web">Studio</span>
-        </a>
         <ul class="menu">
+          <li>
+            <a href="./index.html" class="logo"
+              >Web<span class="logo-web">Studio</span>
+            </a>
+          </li>
           <li><a href="" class="menu-link">Studio</a></li>
           <li><a href="" class="menu-link">Portfolio</a></li>
           <li><a href="" class="menu-link">Contacts</a></li>
@@ -48,7 +50,7 @@
       </section>
       <!-- feautures -->
       <section>
-        <h2 class="feautures-title">Our Offert</h2>
+        <h2 class="feautures-title">Our feautures</h2>
         <ul class="features">
           <li>
             <h3 class="feature-title">Strategy</h3>
@@ -87,30 +89,30 @@
         <ul class="team">
           <li class="team-item">
             <img
-              src="./images/Mark-Guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               width="264"
               alt="Mark Guerrero"
             />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-profession">Product Designer</p>
-          </li >
-          <li  class="team-item">
-            <img src="./images/Tom-Ford.jpg" width="264" alt="Tom Ford" />
+          </li>
+          <li class="team-item">
+            <img src="./images/tom-ford.jpg" width="264" alt="Tom Ford" />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-profession">Frontend Developer</p>
           </li>
-          <li  class="team-item">
+          <li class="team-item">
             <img
-              src="./images/Camila-Garcia.jpg"
+              src="./images/camila-garcia.jpg"
               width="264"
               alt="Camila Garcia"
             />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-profession">Marketing</p>
           </li>
-          <li  class="team-item">
+          <li class="team-item">
             <img
-              src="./images/Daniel-Wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               width="264"
               alt="Daniel Wilson"
             />
@@ -121,22 +123,21 @@
       </section>
       <!-- section Portfolio -->
       <section>
-        <h2 class="portfolio-title">Our Team</h2>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio">
-
           <li>
             <img
-              src="./images/Banking-App.jpg"
+              src="./images/banking-app.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3 class="portfolio-name>Banking App</h3>
-            <p class="portfolio-text">Portfolio</p>
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
-              src="./images/Cashless-Payment.jpg"
+              src="./images/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -146,7 +147,7 @@
           </li>
           <li>
             <img
-              src="./images/Meditation-app.jpg"
+              src="./images/meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -156,8 +157,8 @@
           </li>
           <li>
             <img
-              src="./images/Taxi-Service.jpg"
-              alt="Banking App"
+              src="./images/taxi-service.jpg"
+              alt="Taxi Service"
               width="360"
               height="300"
             />
@@ -166,7 +167,7 @@
           </li>
           <li>
             <img
-              src="./images/Screen-Illustrations.jpg"
+              src="./images/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -176,7 +177,7 @@
           </li>
           <li>
             <img
-              src="./images/Online-Courses.jpg"
+              src="./images/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
@@ -187,12 +188,11 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo"
-        >web
-        <span class="logo-web">studio</span>
+        >web<span class="logo-web">studio</span>
       </a>
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
