--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
     <!-- header -->
     <header>
       <nav>
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-span">Studio</span>
+        </a>
         <ul class="menu">
-          <li>
-            <a href="./index.html" class="logo"
-              >Web<span class="logo-web">Studio</span>
-            </a>
-          </li>
           <li><a href="" class="menu-link">Studio</a></li>
           <li><a href="" class="menu-link">Portfolio</a></li>
           <li><a href="" class="menu-link">Contacts</a></li>
@@ -190,7 +188,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >web<span class="logo-web">studio</span>
+        >web<span class="logo-span">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
