--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </main>
     <footer class="footer">
       <a href="./index.html" class="logo"
-        >web<span class="logo-span">Studio</span>
+        >web<span class="logo-span-footer">Studio</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
